--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 :root {
+  /* color */
   --color-background: #f9f7e8;
   --color-mint: #61bfad;
   --color-white: #ffffff;
   --color-pink: #ff8b8b;
   --color-grey: #8f8f8f;
+
+  /* font */
+  --font-medium: 1.1rem;
 }
 
 * {
@@ -42,9 +46,8 @@ h1 {
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: start;
   width: 350px;
-  height: 520px;
   margin: auto;
   background-color: var(--color-pink);
   border-radius: 8px;
@@ -63,7 +66,7 @@ h1 {
 /* item-display */
 .item-display {
   background-color: var(--color-white);
-  height: 400px;
+  height: 370px;
   margin: auto;
   padding: 14px;
 }
@@ -89,11 +92,12 @@ h1 {
 
 #item-input {
   width: 100%;
-  height: 20px;
+  height: 30px;
   padding: 4px 8px;
   outline-style: none;
   border-style: none;
   background-color: var(--color-background);
+  font-size: var(--font-medium);
 }
 
 .item-add {
