--- a/style.css
+++ b/style.css
@@ -69,6 +69,24 @@ h1 {
   height: 370px;
   margin: auto;
   padding: 14px;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+/* scroll style */
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: var(--color-grey);
+}
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
 }
 
 #item {
